[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[project]
name = "OrbitalPy"
version = "0.7.0"
description = "High level orbital mechanics package."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Frazer McLean", email = "frazer@frazermclean.co.uk" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "astropy>=6.0.1",
    "matplotlib>=3.9.4",
    "numpy>=1.26.4",
    "represent>=2.1",
    "scipy>=1.13.1",
    "sgp4>=2.24",
]

[project.urls]
Repository = "https://github.com/RazerM/orbital"

[dependency-groups]
dev = [
    { include-group = "nox" },
    "pytest>=8.4.1",
    "ruff==0.12.5",
    "tabulate>=0.9.0",
]
docs = [
    "furo>=2025.7.19",
    "sphinx>=7.4.7",
]
nox = [
    "nox>=2025.5.1",
]

[tool.uv.build-backend]
module-name = "orbital"

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", # ruff defaults
    "I", # isort
    "UP", # pyupgrade
    "RUF", # ruff
]

[tool.pytest.ini_options]
addopts = "-r s"
testpaths = ["tests"]
